--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^6.0.11"
+        "vite": "^6.2.5"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.11.3"
     }
 }
