--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^6.2.5"
     },
     "dependencies": {
+        "@visx/visx": "^3.12.0",
+        "apexcharts": "^4.7.0",
         "bootstrap-icons": "^1.11.3"
     }
 }
