--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-RewriteEngine on
-RewriteCond %{REQUEST_URI} !^public
+RewriteEngine On
+
+RewriteCond %{REQUEST_URI} !^/public/
 RewriteRule ^(.*)$ public/$1 [L]
+
